TODO: enable bridging (compile-time option?)
TODO: explore DTLS

2.0
	- protocol version 0.1, compatible with older releases.
        - implemented != for sockinfo. This fixes a bug where
          gvpe sent packets to the old ip address of another host
          even though it had received packets from it's new address.
          This only cuases problems if you forget to -HUP your gvpe after
          your ip address changed, which is *required*.

1.9 Tue Apr 19 06:21:50 CEST 2005
	- protocol version 0.1, compatible with older releases.
        - WARNING: this version checks the return value of if-up etc.
          scripts and exits on failure.
        - IMPORTANT: run if-up/node-up etc. scripts via /bin/sh.
        - IMPORTANT: interface initialization (MAC, MTU) is now done
          automatically in most configurations.
        - options can now be specified on the gvpe command line, too.
        - make some DNS transport values configurable and document them.
        - improved OS specific information in gvpe.osdep(5).
        - new tap device type "native/darwin", that supports the tap
          driver available for darwin (thanks to matthew mead who tested
          it out with me in a long session). tincd/darwin is still available.
        - new device type "tincd/bsd", which is a newer version of the
          *bsd-drivers taken from tinc.
        - fixed a bug in relying on the order of global construction
          when tcp transport was enabled. The fix makes it use no
          cpu time unless it is in use, too.
        - information about other nodes is now available to if-up etc. scripts.
        - the value of the config variable if-up-data is passed to the if-up
          etc. scripts.
	- skip unparsable config lines with a warning instead of stopping
          parsing and continuing with a certainly unusable config.

1.8 Fri Mar 18 00:58:55 CET 2005
	- protocol version 0.1, compatible with older releases.